# knowform

./: .gitignore  .knowformignore  .pre-commit-hooks.yaml  HANDOFF.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/knowform/: __init__.py  __main__.py  apply.py  docstate.py  frontmatter.py  gitdiff.py  graph.py  init.py  judge.py  manifest.py  markdown.py  materialize.py  plan.py  regions.py  sync.py
tests/: test_apply.py  test_docstate.py  test_docstring_e2e.py  test_docstring_regions.py  test_frontmatter.py  test_gitdiff.py  test_graph.py  test_heading_anchor.py  test_heading_plan.py  test_ignore.py  test_init.py  test_init_cli_matcher.py  test_init_fuzzy.py  test_init_llm.py  test_init_summary.py  test_init_unmatched.py  test_judge.py  test_manifest.py  test_materialize.py  test_plan.py  test_regions.py  test_security.py  test_state.py
tests/fixtures/: calc.py  decorated.py  documented.py  managed_add.md  managed_decorated.md  managed_escape.md  managed_scaled.md  managed_sidecar.md  managed_whole.md  no_direction.md  unmanaged.md
