[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "knowform"
dynamic = ["version"]
description = "Terraform for docs - declarative doc↔code drift reconciliation: init · plan · sync · apply."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Andy Lan" }]
keywords = ["documentation", "drift", "docs-as-code", "reconciliation", "ast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
judge = ["anthropic"]

[project.scripts]
knowform = "knowform.__main__:main"

[project.urls]
Homepage = "https://github.com/AndyLan0503/knowform"
Source = "https://github.com/AndyLan0503/knowform"
Issues = "https://github.com/AndyLan0503/knowform/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/knowform"]

[tool.hatch.build.targets.sdist]
include = ["src/knowform", "tests", "README.md", "LICENSE"]
